# machete

./: .gitignore  .gitmodules  README.md  kittens.gitingest  megakernel.gitingest  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: bench.txt  benchmark_fa3_h100.py  benchmark_gated_linear.py  benchmark_gated_mlp.py  benchmark_gemm.py  benchmark_kernels.py  benchmark_megakernel.py  benchmark_page_scheduling.py  benchmark_qwen3.py  benchmark_rmsnorm.py  benchmark_rope.py
benchmarks/kernels/: benchmark_attention.py  benchmark_conv1d.py  benchmark_cross_entropy.py  benchmark_flash_decoding.py  benchmark_fused_gemm.py  benchmark_fusion_rmsnorm.py  benchmark_gated_delta_net.py  benchmark_gemm.py  benchmark_gemm_rope_gdn.py  benchmark_gemm_sm100.py  benchmark_glu.py  benchmark_llama1b_decode.py  benchmark_llama1b_sm120_decode.py  benchmark_moe_gemm.py  benchmark_qwen3_5_backward.py  benchmark_qwen3_5_decode.py  benchmark_qwen3_5_layer.py  benchmark_qwen3_5_nvfp4_decode.py  (+7 more)
docs/: interface.md
scripts/: benchmark_decode_activation_staging.py  benchmark_framework_scaling.py  benchmark_layer_sequential_vs_fused.py  benchmark_llama1b_single_ops.py  benchmark_llamacpp_forward.py  benchmark_nvfp4_weight_staging.py  benchmark_overlap_scheduler.py  benchmark_qwen_backward_scheduler.py  benchmark_qwen_forward_scheduler.py  benchmark_tma_vs_cpasync_overlap.py  compute_sanitizer_smoke.py  trace_deps.py  trace_qwen_layer.py  trace_rope.py  track_megakernel_perf.py
tests/: README.md  conftest.py  scratch_v4_test.py  support.py  test_gated_linear.py  test_gated_mlp.py  test_geglu.py  test_patch.py  test_qwen3_5_decode_layout.py  test_rope.py  test_silu.py
traces/: qwen_bwd_overlap_s32.json
(+279 files in other folders)
